UseCaseManagement/force-app/main/default/objects/Campaign_Element__c/Campaign_Element__c.object-meta.xml
<CustomObject>
    <label>Campaign Element</label>
    <nameField>
        <displayFormat>CAMP-{0000}</displayFormat>
        <label>Campaign Element Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>