UseCaseManagement/force-app/main/default/objects/Campaign_Element__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Elements</relationshipLabel>
    <relationshipName>Campaign_Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>