UseCaseManagement/force-app/main/default/objects/Campaign_Element__c/fields/Cost_of_Publication_Clone__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Publication_Clone__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost of Publication Clone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>