UseCaseManagement/force-app/main/default/objects/Campaign_Element__c/fields/Media_Agent__c.field-meta.xml
<CustomField>
    <fullName>Media_Agent__c</fullName>
    <formula>Publication_Name__r.Media_Agent__r.FirstName &amp; &#39; &#39; &amp;  Publication_Name__r.Media_Agent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Media Agent</label>
    <type>Text</type>
</CustomField>