UseCaseManagement/force-app/main/default/objects/Campaign_Element__c/fields/Publication_Name__c.field-meta.xml
<CustomField>
    <fullName>Publication_Name__c</fullName>
    <label>Publication Name</label>
    <referenceTo>Publication__c</referenceTo>
    <relationshipLabel>Campaign Elements</relationshipLabel>
    <relationshipName>Campaign_Elements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>