UseCaseManagement/force-app/main/default/objects/Campaign_Element__c/fields/ReachClone__c.field-meta.xml
<CustomField>
    <fullName>ReachClone__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>