UseCaseManagement/force-app/main/default/objects/Campaign_Element__c/fields/Revenue_Field__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Field__c</fullName>
    <formula>IF( ISPICKVAL( Status__c ,&#39;Approved&#39;) ,(( Publication_Name__r.Actual_Reach__c  *  Campaign_Name__r.Cost_of_the_Product__c)-Publication_Name__r.Cost_of_Publication__c ) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>