UseCaseManagement/force-app/main/default/objects/Campaign_Element__c/validationRules/Publication_Filter.validationRule-meta.xml
<ValidationRule>
    <fullName>Publication_Filter</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ((INCLUDES(  Campaign_Name__r.Language__c  , &#39;Hindi&#39;)  &amp;&amp;    ISPICKVAL(Publication_Name__r.Publication_Language__c, &#39;Hindi&#39;))||(INCLUDES(  Campaign_Name__r.Language__c  , &#39;English&#39;)  &amp;&amp;    ISPICKVAL(Publication_Name__r.Publication_Language__c, &#39;English&#39;))||(INCLUDES(  Campaign_Name__r.Language__c  , &#39;Spanish&#39;)  &amp;&amp;    ISPICKVAL(Publication_Name__r.Publication_Language__c, &#39;Spanish&#39;))||(INCLUDES(  Campaign_Name__r.Language__c  , &#39;French&#39;)  &amp;&amp;    ISPICKVAL(Publication_Name__r.Publication_Language__c, &#39;French&#39;)) ||(INCLUDES(  Campaign_Name__r.Language__c  , &#39;Chinese&#39;)  &amp;&amp;    ISPICKVAL(Publication_Name__r.Publication_Language__c, &#39;Chinese&#39;)))&amp;&amp;
((INCLUDES(   Campaign_Name__r.Target_Region__c   , &#39;Western Europe&#39;)  &amp;&amp;    ISPICKVAL( Publication_Name__r.Region_of_Operation__c , &#39;Western Europe&#39;))||(INCLUDES(   Campaign_Name__r.Target_Region__c   , &#39;Central and Eastern Europe&#39;)  &amp;&amp;    ISPICKVAL( Publication_Name__r.Region_of_Operation__c , &#39;Central and Eastern Europe&#39;))||(INCLUDES(   Campaign_Name__r.Target_Region__c   , &#39;Asia&#39;)  &amp;&amp;    ISPICKVAL( Publication_Name__r.Region_of_Operation__c , &#39;Asia&#39;))||(INCLUDES(   Campaign_Name__r.Target_Region__c   , &#39;Africa&#39;)  &amp;&amp;    ISPICKVAL( Publication_Name__r.Region_of_Operation__c , &#39;Africa&#39;))||(INCLUDES(   Campaign_Name__r.Target_Region__c   , &#39;Americas&#39;)  &amp;&amp;    ISPICKVAL( Publication_Name__r.Region_of_Operation__c , &#39;Americas&#39;))||(INCLUDES(   Campaign_Name__r.Target_Region__c   , &#39;Mediterranean &amp; Middle East&#39;)  &amp;&amp;    ISPICKVAL( Publication_Name__r.Region_of_Operation__c , &#39;Mediterranean &amp; Middle East&#39;)))&amp;&amp;
((INCLUDES(   Campaign_Name__r.Publication_Cycle__c    , &#39;Daily&#39;)  &amp;&amp;    ISPICKVAL(  Publication_Name__r.Publication_Cycle__c  , &#39;Daily&#39;))||(INCLUDES(   Campaign_Name__r.Publication_Cycle__c    , &#39;Monthly&#39;)  &amp;&amp;    ISPICKVAL(  Publication_Name__r.Publication_Cycle__c  , &#39;Monthly&#39;))||(INCLUDES(   Campaign_Name__r.Publication_Cycle__c    , &#39;Weekly&#39;)  &amp;&amp;    ISPICKVAL(  Publication_Name__r.Publication_Cycle__c  , &#39;Weekly&#39;))

) , false, true)</errorConditionFormula>
    <errorDisplayField>Publication_Name__c</errorDisplayField>
    <errorMessage>Publication doesnt match your filter criteria</errorMessage>
</ValidationRule>