UseCaseManagement/force-app/main/default/objects/Campaign_Element__c/validationRules/Publication_Validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Publication_Validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>IF(( 
(ISPICKVAL(Campaign_Name__r.Status, &#39;In Progress&#39;)|| ISPICKVAL(Campaign_Name__r.Status, &#39;Planned&#39;)  )
),false, true)</errorConditionFormula>
    <errorDisplayField>Campaign_Name__c</errorDisplayField>
    <errorMessage>Selected campaign is either closed or aborted</errorMessage>
</ValidationRule>